# Backshot_roulette_main

./: .gitignore  088fd4b6-04bc-414c-b41a-252da746748b.vsidx  1dc4c023-2e64-4950-b909-72921c1f07c1.vsidx  4904aa6e-bb71-43c5-85fa-42c1c74e61c8.vsidx  AI.cpp  AI.h  Backshot_roulette.slnx  Backshot_roulette.vcxproj  Backshot_roulette.vcxproj.filters  Browse.VC.db  CMake Overview  CMakeLists.txt  CMakeSettings.json  CodeChunks.db  DealerAI.cpp  DocumentLayout.json  GAME.ipch  Game.cpp  Game.h  GameState.h  Item.cpp  Item.h  Particle.cpp  Particle.h  Player.cpp  Player.h  README (2).md  README (5).md  SHOTGUN.ipch  Shell.cpp  Shotgun.cpp  Shotgun.h  SoundManager.cpp  UI.cpp  UI.h  UI.ipch  Utils.cpp  build.ninja  cmake.db  cmake_install.cmake  (+9 more)
0/ezyZip/: CMakeLists.txt
0/ezyZip/include/: GameState.h  Particle.h  Shotgun.h  UI.h
0/ezyZip/src/: Game.cpp  Particle.cpp  Shell.cpp  Shotgun.cpp  main.cpp
SFML-2.6.0/examples/ftp/: Ftp.cpp
SFML-2.6.0/examples/island/: Island.cpp
SFML-2.6.0/examples/joystick/: Joystick.cpp
SFML-2.6.0/examples/opengl/: OpenGL.cpp
SFML-2.6.0/examples/shader/: Shader.cpp
SFML-2.6.0/examples/sockets/: Sockets.cpp  TCP.cpp  UDP.cpp
SFML-2.6.0/examples/sound/: Sound.cpp
SFML-2.6.0/examples/sound_capture/: SoundCapture.cpp
SFML-2.6.0/examples/tennis/: Tennis.cpp
SFML-2.6.0/examples/voip/: Client.cpp  Server.cpp  VoIP.cpp
SFML-2.6.0/examples/vulkan/: Vulkan.cpp  vulkan.h
SFML-2.6.0/examples/win32/: Win32.cpp
SFML-2.6.0/examples/window/: Window.cpp
